[tool.poetry]
name = "notify-bills"
version = "0.1.0"
description = ""
authors = ["Harry Tran"]
readme = "README.md"
packages = [{include = "notify_bills"}]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.11.4"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
